# cca

./: .gitignore  Readme.md
CMake/CCA/: CMakeLists.txt  mingw64-toolchain.cmake
CMake/Tests/: CMakeLists.txt
Header Files/: cca.h  common.h  filesystem_management.h  format_logs.h  write_file.h
Header Files/Files/: file_io.h  filesystem_management.h
Header Files/Logs/: format_logs.h  logs.h
Header Files/String/: tokenizer.h
Header Files/Tests/: format_logs.test.h  main.test.h  write_file.test.h
Source Files/: Main.cc  try.cc
Source Files/FILES/: file_io.cc  filesystem_rw.cc
Source Files/FILESYSTEM_HANDLING/: filesystem_rw.cc
Source Files/FIlE_IO/: Write_File.cc
Source Files/LOGGING/: Format_Logs.cc  Log.cc  format_logs.cc
Source Files/STRING/: tekenizer.cc
Tests/: main.test.cc
Tests/FILE_IO_TESTs/: Write_File.test.cc
Tests/LOGGING_TESTs/: Format_Logs.test.cc
docs/: Todo.md
